feat: 新增身份认证功能

--- a/configs/fb-apiserver.yaml
+++ b/configs/fb-apiserver.yaml
@@ -13,3 +13,8 @@ log:
   output: stdout
 
 addr: ":8080"
+
+# JWT 签发密钥
+jwt-key: Rtg8BPKNEf2mB4mgvKONGPZZQSaJWNLijxR42qRgq0iBb5
+# JWT Token 过期时间
+expiration: 1000h
