--- a/configs/fb-apiserver.yaml
+++ b/configs/fb-apiserver.yaml
@@ -18,6 +18,8 @@ log:
 http:
   addr: 127.0.0.1:8080
 
+# 服务模式，可选值为 http、grpc、grpc-gateway
+server-mode: http
 # JWT 签发密钥
 jwt-key: Rtg8BPKNEf2mB4mgvKONGPZZQSaJWNLijxR42qRgq0iBb5
 # JWT Token 过期时间
